# WizzardChess

./: .gitignore  CMakeLists.txt  LICENSE  WizardChess.sln
WizardChess/: Model.cpp  Model.h  Types.h  WizardChess.cpp  WizardChess.vcxproj  WizardChess.vcxproj.filters  WizzardChess.cpp  main.cpp  main.h
WizardChess/shaders/: compile.bat  shader.vert
assets/shaders/: compile.bat  compileAll.bat  select.frag  select.vert  shader.frag  shader.vert  shadow.frag  shadow.vert
include/: BmpUtils.h  Debug.h  MemoryTracker.h  Model.h  Types.h  Utils.h  VulkanDeviceManager.h  VulkanHelper.h  VulkanSurfaceManager.h  WizardChess.h  main.h  stb_image.h
src/: MemoryTracker.cpp  Model.cpp  VulkanDeviceManager.cpp  VulkanSurfaceManager.cpp  WizardChess.cpp  main.cpp
